{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 32,
  "lineage": "0bcc2012-5912-3b9b-2369-b1f4ffaa3027",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngweip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0955e9776ee88a8bb",
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:elastic-ip/eipalloc-0955e9776ee88a8bb",
            "domain": "vpc",
            "id": "eipalloc-0955e9776ee88a8bb",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-178-134-122.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.134.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-0"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c960822549b7b3b",
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:elastic-ip/eipalloc-01c960822549b7b3b",
            "domain": "vpc",
            "id": "eipalloc-01c960822549b7b3b",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-179-158-14.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.158.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-1"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:internet-gateway/igw-0b0dd18f966d94510",
            "id": "igw-0b0dd18f966d94510",
            "owner_id": "084375555299",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "dependencies": [
            "aws_vpc.phamtuan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0955e9776ee88a8bb",
            "association_id": "eipassoc-08d9cf3aa81ba488f",
            "connectivity_type": "public",
            "id": "nat-057d1c21e08c8237b",
            "network_interface_id": "eni-03e8cbeced414ecdc",
            "private_ip": "10.0.2.11",
            "public_ip": "18.178.134.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e475f0eee5b13a3d",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-0"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-0"
            }
          },
          "dependencies": [
            "aws_eip.ngweip",
            "aws_subnet.private",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c960822549b7b3b",
            "association_id": "eipassoc-0b8aca0aab762eeab",
            "connectivity_type": "public",
            "id": "nat-07d4c2886f14c62a8",
            "network_interface_id": "eni-0eacd117ed564cd85",
            "private_ip": "10.0.3.31",
            "public_ip": "18.179.158.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046258209835a5784",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-1"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-ngw-eip-1"
            }
          },
          "dependencies": [
            "aws_eip.ngweip",
            "aws_subnet.private",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b0dd18f966d94510",
            "id": "r-rtb-0a0e804e261e7d04c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0e804e261e7d04c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.phamtuan-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:route-table/rtb-0438ee7b51408f1c9",
            "id": "rtb-0438ee7b51408f1c9",
            "owner_id": "084375555299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057d1c21e08c8237b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-private-rtb-0"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-private-rtb-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngweip",
            "aws_nat_gateway.ngw",
            "aws_subnet.private",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:route-table/rtb-027e45949796f04ad",
            "id": "rtb-027e45949796f04ad",
            "owner_id": "084375555299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d4c2886f14c62a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-private-rtb-1"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan",
              "ext-name": "phamtuan-tf-vpc-private-rtb-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngweip",
            "aws_nat_gateway.ngw",
            "aws_subnet.private",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9f1c0048c21d251",
            "route_table_id": "rtb-0438ee7b51408f1c9",
            "subnet_id": "subnet-0e475f0eee5b13a3d"
          },
          "dependencies": [
            "aws_eip.ngweip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rtb",
            "aws_subnet.private",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069f8a1b516ab5131",
            "route_table_id": "rtb-027e45949796f04ad",
            "subnet_id": "subnet-046258209835a5784"
          },
          "dependencies": [
            "aws_eip.ngweip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rtb",
            "aws_subnet.private",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71139020a5d35b3",
            "route_table_id": "rtb-0a0e804e261e7d04c",
            "subnet_id": "subnet-096336f93649805f4"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044fbfc6f5a7394b8",
            "route_table_id": "rtb-0a0e804e261e7d04c",
            "subnet_id": "subnet-0e941b16461fabe4c"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:subnet/subnet-0e475f0eee5b13a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e475f0eee5b13a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "dependencies": [
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:subnet/subnet-046258209835a5784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046258209835a5784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "dependencies": [
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:subnet/subnet-096336f93649805f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096336f93649805f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "dependencies": [
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:subnet/subnet-0e941b16461fabe4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e941b16461fabe4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375555299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "vpc_id": "vpc-0d0333f23ba93936d"
          },
          "dependencies": [
            "aws_vpc.phamtuan-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "phamtuan-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:084375555299:vpc/vpc-0d0333f23ba93936d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008ca737ac0628b59",
            "default_route_table_id": "rtb-0a0e804e261e7d04c",
            "default_security_group_id": "sg-086fa75dbfc7c8183",
            "dhcp_options_id": "dopt-0669ad635cfd3eac6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0333f23ba93936d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0e804e261e7d04c",
            "owner_id": "084375555299",
            "tags": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            },
            "tags_all": {
              "Name": "phamtuan-tf-vpc",
              "Owner": "phamtuan"
            }
          }
        }
      ]
    }
  ]
}